--- a/app/assets/stylesheets/advance_search.scss
+++ b/app/assets/stylesheets/advance_search.scss
@@ -65,15 +65,24 @@
 }
 
 .alphabet-link {
-  font-size: 0.85rem; 
-  line-height: 1.3;
-  width: 100%;
-  text-align: center;
-}
+  transition: color 0.2s ease;
 
-.alphabet-link:hover {
-  background-color: #e9ecef;
-  color: #0d6efd !important;
+  i.bi-arrow-clockwise {
+    display: inline-block;
+    transition: transform 0.4s cubic-bezier(0.34, 1.56, 0.64, 1), color 0.2s ease;
+    color: $aedg-navy;
+    -webkit-text-stroke: 0.5px $aedg-navy;
+  }
+
+  &:hover {
+    color: $aedg-yellow !important;
+
+    i.bi-arrow-clockwise {
+      transform: rotate(-180deg);
+      color: $aedg-yellow; 
+      -webkit-text-stroke: 0.5px $aedg-yellow;
+    }
+  }
 }
 
 .small-pagy {
